syntax = "proto3";

option go_package = "github.com/gianmarcomennecozzi/grpc-auth-gateway/proto;todo";
option java_multiple_files = true;
option java_package = "grpc-auth-gateway.todo";
option java_outer_classname = "TodoProto";

service Todo {
  rpc AddTodo (AddTodoRequest) returns (AddTodoResponse) {}
  rpc GetTodos (Empty) returns (stream AddTodoResponse) {}
}

message Empty {}

message AddTodoRequest {
  string name = 1;
}

message AddTodoResponse {
  string id = 1;
  string name = 2;
}